k8s/websocket/servce.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: websocket-server
  ports:
  - name: websocket
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service-nodeport
spec:
  selector:
    app: websocket-server
  ports:
  - name: websocket
    port: 8080
    targetPort: 8080
    nodePort: 30081
    protocol: TCP
  - name: http
    port: 3001
    targetPort: 3001
    nodePort: 30082
    protocol: TCP
  type: NodePort
